[Feat] daekim 코드 추가

--- a/Level 2/20. 2개 이하로 다른 비트.md
+++ b/Level 2/20. 2개 이하로 다른 비트.md
@@ -10,3 +10,31 @@ function solution(numbers) {
     return numbers.map((el) => f('0' + el.toString(2)));
 }
 ```
+
+daekim
+```js
+function solution(numbers) {
+    return (numbers.map((e) => {
+        let bi = e.toString(2);
+        let pos;
+        
+        if (bi[bi.length - 1] === '0')
+            return e + 1;
+        else
+        {
+            pos = bi.lastIndexOf('0');
+            if (pos === -1)
+            {
+                bi = ('1' + bi).split('');
+                bi[1] = '0';
+            } 
+            else
+            {
+                bi = bi.split('');
+                [bi[pos], bi[pos + 1]] = [bi[pos + 1], bi[pos]];
+            }
+            return parseInt(bi.join(''), 2); 
+        }
+    }))
+}
+```
