Update 19. 게임 맵 최단거리.md

--- a/Level 2/19. 게임 맵 최단거리.md
+++ b/Level 2/19. 게임 맵 최단거리.md
@@ -55,7 +55,7 @@ function solution(maps) {
             rec(arr, cnt + 1, x, y - 1);
         if (x > 0 && arr[y][x - 1] === 1 && y < arr.length - 2)
             rec(arr, cnt + 1, x - 1, y);
-        // arr[y][x] = 1;
+        arr[y][x] = 1;
     }
     rec(maps, 0, 0, 0);
     if (min === maps.length * maps[0].length && check === 0)
