[Feat] 자배 코드 추가

--- a/Level 2/19. 게임 맵 최단거리.md
+++ b/Level 2/19. 게임 맵 최단거리.md
@@ -24,7 +24,41 @@ function solution(maps) {
     return len[`${gy}, ${gx}`] === undefined ? -1 : len[`${gy}, ${gx}`];
 }
 ```
+jabae
+```js
+function solution(maps) {
+    const h = maps.length - 1;
+    const w = maps[0].length - 1;
+    const moveY = [+1, -1, 0, 0];
+    const moveX = [0, 0, +1, -1];
+    const visited = Array.from(new Array(h + 1), () => new Array(w + 1).fill(0));
+    const path = Array.from(new Array(h + 1), () => new Array(w + 1).fill(0));
+    const canVisit = (y, x) => (y >= 0 && y <= h && x >= 0 && x <= w) && maps[y][x] === 1 && !visited[y][x];
+    const bfs = (y, x) => {
+        const queue = [[0, 0]];
+        path[y][x] = 1;
+        
+        while (queue.length) {
+            const target = queue.shift();
+            const currentY = target[0];
+            const currentX = target[1];
+            if (visited[currentY][currentX] === 1) continue;
+            
+            visited[currentY][currentX] = 1;
+            for (let i = 0; i < 4; i++) {
+                const nextY = currentY + moveY[i];
+                const nextX = currentX + moveX[i];
+                if (!canVisit(nextY, nextX)) continue;
 
+                queue.push([nextY, nextX]);
+                path[nextY][nextX] = path[currentY][currentX] + 1;
+            }
+        }
+    }
+    bfs(0, 0);
+    return path[h][w] || -1;
+}
+```
 
 daekim - 효율성 테스트 실패
 ```js
