[Feat] 자배 코드 추가

--- a/Level 2/20. 2개 이하로 다른 비트.md
+++ b/Level 2/20. 2개 이하로 다른 비트.md
@@ -10,6 +10,30 @@ function solution(numbers) {
     return numbers.map((el) => f('0' + el.toString(2)));
 }
 ```
+jabae - 효율성 실패!
+```js
+function solution(numbers) {
+    const answer = numbers.map((el) => {
+        let binary1 = el.toString(2);
+        let binary2 = '';
+        let len1 = binary1.length;
+        let len2 = 0;
+        for (let next = el + 1; ; next++) {
+            binary2 = next.toString(2);
+            len2 = binary2.length;
+            let count = 0;
+            for (let i = 1; i <= len2; i++) {
+                if (count > 3) break;
+                if (len1 - i < 0 && binary2[len2 - i] === '1') count++;
+                else if (binary2[len2 - i] !== binary1[len1 - i]) count++;
+            }
+            if (count <= 2) break ;
+        }
+        return parseInt(binary2, 2);
+    })
+    return answer;
+}
+```
 
 daekim
 ```js
