[Feat] 자배 코드 추가

--- a/Level 1/15. 최대공약수와 최소공배수.md
+++ b/Level 1/15. 최대공약수와 최소공배수.md
@@ -11,7 +11,15 @@ function solution(n, m) {
 
 jabae
 ```js
-
+function solution(n, m) {
+    const gcd = (a, b) => {
+        if (b === 0) return a;
+        else return gcd(b, a % b);
+    }
+    const g = gcd(n, m);
+    const l = n * m / g;
+    return [g, l];
+}
 
 ```
 
