[Faet] 자배 코드 추가

--- a/Level 1/16. 같은 숫자는 싫어.md
+++ b/Level 1/16. 같은 숫자는 싫어.md
@@ -10,7 +10,13 @@ function solution(arr) {
 
 jabae
 ```js
-
+function solution(arr)
+{
+    return arr.reduce((acc, cur) => {
+        if (acc[acc.length - 1] !== cur) acc.push(cur);
+        return acc;
+    }, []);
+}
 ```
 
 daekim
