[Feat] 자배 코드 추가

--- a/Level 1/17. 이상한 문자 만들기.md
+++ b/Level 1/17. 이상한 문자 만들기.md
@@ -7,7 +7,12 @@ function solution(s) {
 
 jabae
 ```js
-
+function solution(s) {
+    return s.toLowerCase()
+            .split(' ')
+            .map((str) => str.split('').map((c, i) => i % 2 === 0 ? c.toUpperCase() : c).join(''))
+            .join(' ');;
+}
 ```
 
 daekim
