[Feat] 자배 코드 추가

--- a/Level 1/18. 3진법 뒤집기.md
+++ b/Level 1/18. 3진법 뒤집기.md
@@ -4,3 +4,10 @@ function solution(n) {
     return parseInt(n.toString(3).split('').reverse().join(''), 3);
 }
 ```
+
+jabae
+```
+function solution(n) {
+    return parseInt(n.toString(3).split('').reverse().join(''), 3);
+}
+```
