[Feat] 자배 코드 추가

--- a/Level 1/19. 예산.md
+++ b/Level 1/19. 예산.md
@@ -7,3 +7,17 @@
     return max;
 }
  ```
+
+jabae
+```js
+function solution(d, budget) {
+    let count = 0;
+    d.sort((a, b) => a - b);  
+    for (let i = 0; i < d.length; i++) {
+        budget -= d[i];
+        if (budget < 0) break;
+        else count++;
+    }
+    return count;
+}
+```
