[Fix] 자배 코드 한 줄 삭제

--- a/Level 1/19. 예산.md
+++ b/Level 1/19. 예산.md
@@ -14,8 +14,7 @@ function solution(d, budget) {
     let count = 0;
     d.sort((a, b) => a - b);  
     for (let i = 0; i < d.length; i++) {
-        budget -= d[i];
-        if (budget < 0) break;
+        if ((budget -= d[i]) < 0) break;
         else count++;
     }
     return count;
