[Feat] 자배 코드 추가

--- a/Level 1/20. 시저 암호.md
+++ b/Level 1/20. 시저 암호.md
@@ -9,3 +9,26 @@ function solution(s, n) {
     },'');
 }
 ```
+
+jabae
+```js
+function solution(s, n) {
+    let answer = '';
+    const changeCharCode = (code, isLower) => {
+        const criteria = isLower ? 122 : 90;
+        return code / criteria <= 1
+                ? String.fromCharCode(code)
+                : String.fromCharCode(code % criteria + (isLower ? 96 : 64))
+    }
+    
+    for (let i = 0; i < s.length; i++) {
+        if (s[i] === ' ') {
+            answer += ' ';
+            continue;
+        }
+        answer += changeCharCode(s.charCodeAt(i) + n, (/^[a-z]/).test(s[i]));
+    }
+
+    return answer;
+}
+```
