Add daekim code

--- a/Level 1/20. 시저 암호.md
+++ b/Level 1/20. 시저 암호.md
@@ -32,3 +32,28 @@ function solution(s, n) {
     return answer;
 }
 ```
+
+daekim
+```js
+function solution(s, n) {
+    let small = 'abcdefghijklmnopqrstuvwxyz';
+    let big = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+    let ret = '';
+    s.split('').forEach((el) => {
+        if (el === ' ')
+        {
+            ret += ' ';
+            return ;
+        }
+        ret += (el === ' ') ? ' ' : 
+        small.includes(el) ? (
+            small.indexOf(el) + n > 25 ? 
+            small[small.indexOf(el) + n - 26] : small[small.indexOf(el) + n]
+        ) : (
+            big.indexOf(el) + n > 25 ? 
+            big[big.indexOf(el) + n - 26] : big[big.indexOf(el) + n]
+        )
+    })
+    return ret;
+}
+```
