Add daekim code

--- a/Level 1/19. 예산.md
+++ b/Level 1/19. 예산.md
@@ -20,3 +20,27 @@ function solution(d, budget) {
     return count;
 }
 ```
+
+daekim
+```js
+function solution(d, budget) {
+    let ret = d.length;
+    let sum = 0;
+    let arr = d.sort((a, b) => a - b);
+    for (let i = 0; i < arr.length; i++)
+    {
+        sum += arr[i];
+        if (sum === budget)
+        {
+            ret = i + 1;
+            break;
+        }
+        else if (sum > budget)
+        {
+            ret = i;
+            break;
+        }
+    }
+    return (ret);
+}
+```
