--- a/Level 1/18. 3진법 뒤집기.md
+++ b/Level 1/18. 3진법 뒤집기.md
@@ -11,3 +11,10 @@ function solution(n) {
     return parseInt(n.toString(3).split('').reverse().join(''), 3);
 }
 ```
+
+daekim
+```js
+function solution(n) {
+    return (parseInt(n.toString(3).split('').reverse().join(''), 3));
+}
+```
