Add daekim code

--- a/Level 2/21. 할인행사.md
+++ b/Level 2/21. 할인행사.md
@@ -21,3 +21,30 @@
     return answer;
 }
  ```
+
+daekim
+```js
+function solution(want, number, discount) {
+    for (let i = 0; i < want.length; i++)
+    {
+        if (!discount.includes(want[i]))
+            return (0);
+        if (!want.includes(discount[i]))
+            discount.splice(i, 1);
+    }
+    let cnt = 0;
+    let arr1 = want.slice(0, want.length);
+        for (let i = 0; i < want.length; i++)
+            for (let j = 0; j < number[i] - 1; j++)
+                arr1.push(want[i]);
+    arr1 = JSON.stringify(arr1.sort());
+    discount.forEach((el, idx) => {
+        if (want.includes(el))
+        {
+            if (arr1 === JSON.stringify(discount.slice(idx, idx + 10).sort()))
+                cnt++;
+        }
+    })
+    return cnt
+}
+```
