--- a/Level 2/22. 2 x n 타일링.md
+++ b/Level 2/22. 2 x n 타일링.md
@@ -6,3 +6,13 @@ function solution(n) {
     return fibonacci[1];
 }
 ```
+
+daekim
+```js
+function solution(n) {
+    let arr = [1, 1];
+    for (let i = 2; i <= n; i++)
+        arr.push((arr[i - 1] + arr[i - 2]) % 1000000007);
+    return arr[arr.length - 1];
+}
+```
