[Feat] jihyukim 코드 추가

--- a/Level 2/21. 할인행사.md
+++ b/Level 2/21. 할인행사.md
@@ -1,6 +1,23 @@
- jabae
- ```js
- function solution(want, number, discount) {
+jihyukim
+```js
+function solution(want, number, discount) {
+    const obj = {};
+    want.forEach((el, i) => obj[el] = number[i]);
+    return discount.reduce((acc, cur, i) => {
+        const tmp = JSON.parse(JSON.stringify(obj));
+        for (let j = i; j < i + 10; j++) {
+            if (!tmp[discount[j]]) continue;
+            if (tmp[discount[j]] === 1) delete tmp[discount[j]];
+            else tmp[discount[j]] -= 1;
+        }
+        return Object.keys(tmp).length ? acc : acc + 1;
+    }, 0);
+}
+```
+
+jabae
+```js
+function solution(want, number, discount) {
     let answer = 0;
     const list = want.reduce((acc, cur, idx) => {
         acc[cur] = number[idx];
