--- a/Level 2/22. 2 x n 타일링.md
+++ b/Level 2/22. 2 x n 타일링.md
@@ -1,3 +1,11 @@
+jihyukim
+```js
+function solution(n) {
+    const arr = [1, 1];
+    for (let i = 2; i <= n; i++) arr.push((arr[i - 2] + arr[i - 1]) % 1000000007);
+    return arr[n];
+}
+```
 jabae
 ```js
 function solution(n) {
