[Feat] daekim 코드 추가

--- a/Level 1/21. 최소직사각형.md
+++ b/Level 1/21. 최소직사각형.md
@@ -7,3 +7,15 @@ function solution(sizes) {
     return w * h;
 }
 ```
+
+daekim
+```js
+function solution(sizes) {
+    let ret = [0,0];
+    sizes.forEach((el) =>{
+        ret[0] = Math.max(ret[0], Math.max(el[0], el[1]))
+        ret[1] = Math.max(ret[1], Math.min(el[0], el[1]))
+    })
+    return (ret[0] * ret[1])
+}
+```
