[Feat] daekim 코드 추가

--- a/Level 1/22. [1차] 비밀지도.md
+++ b/Level 1/22. [1차] 비밀지도.md
@@ -8,3 +8,19 @@ function solution(n, arr1, arr2) {
     });
 }
 ```
+
+daekim
+```js
+function solution(n, arr1, arr2) {
+    let ret = [];
+    let a = arr1.map((el) => {return el.toString(2).padStart(n, 0).split('')})
+    let b = arr2.map((el) => {return el.toString(2).padStart(n, 0).split('')})
+    a.forEach((el, idx) => {
+        ret.push([])
+        el.forEach((e, i) => {
+            ret[idx] += e | b[idx][i] ? '#' : ' ';
+        })
+    })
+    return (ret);
+}
+```
