--- a/Level 2/23. 다리를 지나는 트럭.md
+++ b/Level 2/23. 다리를 지나는 트럭.md
@@ -14,3 +14,36 @@ function solution(len, wei, trucks) {
     return time + bridge.length;
 }
 ```
+
+jabae
+```js
+
+```
+
+daekim
+```js
+function solution(bridge_length, weight, truck_weights) {
+    const basic_len = bridge_length;
+    let bridge = [];
+    let idx = 0;
+    let time = 0;
+    for (time = 1; ;time++)
+    {
+        if (bridge.length > 0 && time - bridge[0].time >= basic_len)
+        {
+            weight += bridge[0].weight;
+            bridge_length++;
+            bridge.shift();
+        }
+        if(weight - truck_weights[idx] >= 0 && bridge_length > 0)
+        {
+            bridge.push({time: time, weight: truck_weights[idx]});
+            weight -= truck_weights[idx++];
+            bridge_length--;
+        }
+        if (idx === truck_weights.length && bridge_length === basic_len)
+            break;
+    }
+    return time;
+}
+```
