[Feat] 자배 코드 추가

--- a/Level 1/21. 최소직사각형.md
+++ b/Level 1/21. 최소직사각형.md
@@ -19,3 +19,13 @@ function solution(sizes) {
     return (ret[0] * ret[1])
 }
 ```
+
+jabae
+```
+function solution(sizes) {
+    const sortedArr = sizes.map(([w, h]) => w > h ? [w, h] : [h, w]);
+    const w = sortedArr.sort((a, b) => b[0] - a[0])[0][0];
+    const h = sortedArr.sort((a, b) => b[1] - a[1])[0][1];
+    return w * h;
+}
+```
