--- a/Level 1/22. [1차] 비밀지도.md
+++ b/Level 1/22. [1차] 비밀지도.md
@@ -24,3 +24,19 @@ function solution(n, arr1, arr2) {
     return (ret);
 }
 ```
+
+jabae
+```js
+function solution(n, arr1, arr2) {
+    const makeBinary = (num) => num.toString(2).padStart(n, "0");    
+    const answer = arr1.reduce((map, line, i) => {
+        const binary1 = makeBinary(line);
+        const binary2 = makeBinary(arr2[i]);
+        let str = "";
+        for (let j = 0; j < n; j++) binary1[j] === "0" && binary2[j] === "0" ? str += " " : str += "#";
+        map.push(str);
+        return map;
+    }, [])
+    return answer;
+}
+```
