[Feat] 자배 코드 추가

--- a/Level 2/23. 다리를 지나는 트럭.md
+++ b/Level 2/23. 다리를 지나는 트럭.md
@@ -17,7 +17,27 @@ function solution(len, wei, trucks) {
 
 jabae
 ```js
+function solution(bridge_length, weight, truck_weights) {   
+    let answer = 1;
+    let real_w = truck_weights.shift();
+    let passing = [[bridge_length, real_w]];
 
+    while (truck_weights.length) {
+        answer++;
+        passing = passing.map(([w, t]) => [w - 1, t]).filter((el) => {
+            if (el[0] > 0) return true;
+            real_w -= el[1];
+            return false;
+        });
+        
+        const temp_w = real_w + truck_weights[0];
+        if (temp_w <= weight && passing.length < weight) {
+            real_w = temp_w;
+            passing.push([bridge_length, truck_weights.shift()]);
+        }
+    }
+    return answer + bridge_length;
+}
 ```
 
 daekim
