[Feat] 자배 코드 추가

--- a/Level 2/24. 가장 큰 수.md
+++ b/Level 2/24. 가장 큰 수.md
@@ -5,7 +5,15 @@ jihyukim
 
 jabae
 ```js
-
+function solution(numbers) {
+    const compareStrNum = (a, b) => {
+        return Number(b + a) - Number(a + b)
+    }
+    const answer = numbers.sort((a1, b1) => {
+        return compareStrNum(a1.toString(), b1.toString());
+    }).join("")
+    return answer.replace(/(^0+)/, "") === "" ? "0" : answer;
+}
 ```
 
 daekim
