[Feat] 자배 코드 추가

--- a/Level 2/25. 소수 찾기.md
+++ b/Level 2/25. 소수 찾기.md
@@ -5,7 +5,25 @@ jihyukim
 
 jabae
 ```js
-
+function solution(numbers) {
+    const answer = new Set();
+    const isPrime = (num) => {
+        if ((num > 2 && num % 2 === 0) || num <= 1) return false;
+        for (let i = 3; i <= Math.sqrt(num); i += 2) {
+            if (num % i === 0) return false;   
+        }
+        return true;
+    }
+    const getNumber = (str, arr) => {
+        for (let i = 0; i < arr.length; i++) {
+            const number = Number(str + arr[i]);
+            if (isPrime(number)) answer.add(number);
+            getNumber(number.toString(), arr.filter((el, j) => j != i));
+        }
+    }
+    getNumber("", numbers.split(""));
+    return answer.size;
+}
 ```
 
 daekim
