--- a/Level 2/25. 소수 찾기.md
+++ b/Level 2/25. 소수 찾기.md
@@ -1,6 +1,23 @@
 jihyukim
 ```js
+function isPrime(n) {
+    if (n === 2) return true;
+    if (n % 2 === 0 || n === 1) return false;
+    for (let i = 3; i <= Math.sqrt(n); i += 2) 
+        if (n % i === 0) return false;
+    return true;
+}
 
+function solution(numbers) {
+    const prime = new Set();
+    const findPrime = (n, arr) => {
+        if (isPrime(+n)) prime.add(n);
+        for (let i = 0; i < arr.length; i++)
+            if (n[0] !== '0') findPrime(n + arr[i], arr.substr(0, i) + arr.substr(i + 1));
+    }
+    findPrime('', numbers);
+    return prime.size;
+}
 ```
 
 jabae
