--- a/Level 2/24. 가장 큰 수.md
+++ b/Level 2/24. 가장 큰 수.md
@@ -1,25 +1,18 @@
 jihyukim
 ```js
 function solution(numbers) {
-    const mySort = (x, y) => {
-        for (let i = 0; i < Math.min(x.length, y.length); i++) {
-            if (x[i] > y[i]) return -1;
-            if (x[i] < y[i]) return 1;
-        }
-        return 0;
-    }
     numbers.sort((a, b) => {
         let [x, y] = [a.toString(), b.toString()];
-        let ret = 0;
         while (x.length && y.length) {
-            ret = mySort(x, y);
-            if (ret) break;
-            if (x.length === y.length) break;
+            if (x === y) return 0;
+            for (let i = 0; i < Math.min(x.length, y.length); i++) {
+                if (x[i] > y[i]) return -1;
+                if (x[i] < y[i]) return 1;
+            }
             if (x.length > y.length) x = x.substring(y.length);
             else if (x.length < y.length) y = y.substring(x.length);
         };
-        return ret;
-    })
+    });
     return numbers[0] ? numbers.join('') : '0';
 }
 ```
