[Fix] jihyukim 코드 수정

--- a/Level 2/23. 다리를 지나는 트럭.md
+++ b/Level 2/23. 다리를 지나는 트럭.md
@@ -7,7 +7,7 @@ function solution(len, wei, trucks) {
         on -= bridge.shift();
         if (on + trucks[0] <= wei) {
             on += trucks[0];
-            bridge.push(trucks.shift(trucks[0]));
+            bridge.push(trucks.shift());
         }
         else bridge.push(0);
     }
