[Feat] daekim 코드 추가

--- a/Level 1/23. 문자열 내 마음대로 정렬하기.md
+++ b/Level 1/23. 문자열 내 마음대로 정렬하기.md
@@ -4,3 +4,10 @@ function solution(strings, n) {
     return strings.sort().sort((a, b) => a[n].charCodeAt(0) - b[n].charCodeAt(0));
 }
 ```
+
+daekim  
+```js
+function solution(strings, n) {
+    return strings.sort((a, b) => a[n] > b[n] ? 1 : a[n] < b[n] ? -1 : a > b ? 1 : -1);
+}
+```
