[Feat] daekim 코드 추가

--- a/Level 1/24. 삼총사.md
+++ b/Level 1/24. 삼총사.md
@@ -10,3 +10,23 @@ function solution(number) {
     return trio.filter((el) => el[0] + el[1] + el[2] === 0).length;
 }
 ```
+
+daekim
+```js
+function solution(number) {
+    let ret = 0;
+    function rec(arr, sum, cnt) {
+        if (cnt === 3)
+        {
+            if (sum === 0)
+                ret++;
+            return ;
+        }
+        arr.forEach((el, idx) => {
+            rec(arr.filter((e, i) => i > idx), sum + el, cnt + 1);
+        })
+    }
+    rec(number, 0, 0);
+    return ret;
+}
+```
