[Feat] 자배 코드 추가

--- a/Level 1/24. 삼총사.md
+++ b/Level 1/24. 삼총사.md
@@ -30,3 +30,18 @@ function solution(number) {
     return ret;
 }
 ```
+
+jabae
+```js
+function solution(number) {
+    let answer = 0;
+    const seek = (sum, count, idx) => {
+        if (!count && !sum) answer++;
+        if (idx < number.length && count > 0) {
+            for (let i = idx; i < number.length; i++) seek(sum + number[i], count - 1, i + 1);
+        }
+    }
+    seek(0, 3, 0);
+    return answer;
+}
+```
