[Feat] 자배 코드 추가

--- a/Level 2/26. 쿼드압축 후 개수 세기.md
+++ b/Level 2/26. 쿼드압축 후 개수 세기.md
@@ -20,3 +20,36 @@ function solution(arr) {
     return res;
 }
 ```
+
+jabae
+```js
+function solution(arr) {
+    const answer = [0, 0];
+    const quadTree = (piece) => {
+        const sum = piece.flat().reduce((acc, cur) => acc + cur);
+        if (!sum) answer[0]++;
+        else if (sum === piece.length ** 2) answer[1]++;
+        else if (piece.length > 1) {
+            const quad = makeQuad(piece);
+            for (let i = 0; i < 4; i++) quadTree(quad[i]);
+        }
+    }
+    quadTree(arr);
+    return answer;
+}
+
+function makeQuad (piece) {
+    const quad = [[], [], [], []];
+    const crtr = piece.length / 2;
+    for (let i = 0; i < crtr * 2; i++) {
+            if (i < crtr) {
+                quad[0].push(piece[i].slice(0, crtr));
+                quad[1].push(piece[i].slice(crtr));
+            } else {
+                quad[2].push(piece[i].slice(0, crtr));
+                quad[3].push(piece[i].slice(crtr));
+            }
+    }
+    return quad;
+}
+```
