--- a/Level 2/27. 124 나라의 숫자.md
+++ b/Level 2/27. 124 나라의 숫자.md
@@ -2,13 +2,12 @@ jihyukim
 ```js
 function solution(n) {
     let res = 0;
-    for (let i = 1; n > 0; i *= 10) {
+    for (let i = 1; n > 0; i *= 10, n = Math.floor(n / 3)) {
         if (n % 3) res += (n % 3) * i;
         else {
             res += 4 * i;
             n -= 1;
         }
-        n = Math.floor(n / 3);
     }
     return res.toString();
 }
