[Feat] 자배 코드 추가

--- a/Level 2/28. 큰 수 만들기.md
+++ b/Level 2/28. 큰 수 만들기.md
@@ -12,3 +12,24 @@ function solution(number, k) {
     return (k ? arr.slice(0, -k) : arr).join('');
 }
 ```
+
+jabae
+```js
+function solution(number, k) {
+    let answer = "";
+    let s = 0;
+    const numArr = number.split('').map((el) => Number(el));
+    for (let e = k + 1; e <= number.length; e++) {
+        let max = 0;
+        for (let i = s; i < e; i++) {
+            if (max >= numArr[i]) continue ;
+            if (max === 9) break ;
+            max = numArr[i];
+            s = i;
+        }
+        s += 1;
+        answer += max;
+    }
+    return answer;
+}
+```
