[Feat] 자배 코드 추가

--- a/Level 2/27. 124 나라의 숫자.md
+++ b/Level 2/27. 124 나라의 숫자.md
@@ -12,3 +12,34 @@ function solution(n) {
     return res.toString();
 }
 ```
+
+jabae
+```js
+function solution(n) {
+    let answer = "";
+    let len = 0;
+    let s = 0;
+    for (let i = 1; ; i++) {
+        if (n >= (Math.pow(3, i) - 1) / 2  && n < (Math.pow(3, i+1) - 1) / 2) {
+            s = (Math.pow(3, i) - 1) / 2;
+            len = i;
+            break;
+        }
+    }
+    for (let i = len; i > 0; --i) {
+        let r = Math.pow(3, i - 1);
+        if (n < s + r) {
+            answer += "1";
+        }
+        else if (n < s + r * 2) {
+            answer += "2";
+            s += r;
+        }
+        else {
+            answer += "4";
+            s += r * 2;
+        }
+    }
+    return answer;
+}
+```
