[Feat] daekim 코드 추가

--- a/Level 2/28. 큰 수 만들기.md
+++ b/Level 2/28. 큰 수 만들기.md
@@ -33,3 +33,29 @@ function solution(number, k) {
     return answer;
 }
 ```
+
+daekim 
+```js
+function solution(number, k) {
+    let ret = '';
+    let loop = number.length - k;
+    let max;
+    let maxidx = -1;
+    while (ret.length < loop)
+    {
+        max = -1;
+        for (let i = maxidx + 1; i <= k; i++)
+        {
+            if (number[i] > max)
+            {
+                max = number[i]
+                maxidx = i;
+                if (max === '9') break;
+            }
+        }
+        ret += max;
+        k++;
+    }
+    return ret;
+}
+```
