[Feat] daekim 코드 추가

--- a/Level 2/27. 124 나라의 숫자.md
+++ b/Level 2/27. 124 나라의 숫자.md
@@ -43,3 +43,21 @@ function solution(n) {
     return answer;
 }
 ```
+
+daekim
+```js
+function solution(n) {
+    let arr = [];
+    function rec(num) {
+        if (num <= 3)
+        {
+            num % 3 === 0 ? arr.push('4') : arr.push(num)
+            return ;
+        }
+        rec(Math.floor(num % 3 ? num / 3 : (num - 1) / 3));
+        arr.push(num % 3 === 0 ? '4' : num % 3);
+    }
+    rec(n);
+    return (arr.join(''));
+}
+```
