[Feat] daekim 코드 추가

--- a/Level 2/26. 쿼드압축 후 개수 세기.md
+++ b/Level 2/26. 쿼드압축 후 개수 세기.md
@@ -53,3 +53,25 @@ function makeQuad (piece) {
     return quad;
 }
 ```
+
+daekim
+```js
+function solution(arr) {
+    let ret = [0, 0];
+    function rec(rawStart, rawEnd, colStart, colEnd) {
+        if (rawStart === rawEnd || colStart === colEnd)
+            return '' + arr[rawStart][colEnd];
+        let q1 = rec(rawStart, (rawStart + rawEnd - 1) / 2, colStart, (colStart + colEnd - 1) / 2);
+        let q2 = rec(rawStart, (rawStart + rawEnd - 1) / 2, (colStart + colEnd + 1) / 2, colEnd);
+        let q3 = rec((rawStart + rawEnd + 1) / 2, rawEnd, colStart, (colStart + colEnd - 1) / 2);
+        let q4 = rec((rawStart + rawEnd + 1) / 2, rawEnd, (colStart + colEnd + 1) / 2, colEnd);
+        if (q1.length === 1 && q1 === q2 && q1 === q3 && q1 === q4)
+            return '' + q1;
+        return '' + q1 + q2 + q3 + q4;
+    }
+    arr = rec(0, arr.length - 1, 0, arr.length - 1)
+    for (let i = 0; i < arr.length; i++)
+        arr[i] === '0' ? ret[0]++ : ret[1]++
+    return ret
+}
+```
