[Refactor] 자배 코드 리팩토링

--- a/Level 2/28. 큰 수 만들기.md
+++ b/Level 2/28. 큰 수 만들기.md
@@ -17,17 +17,16 @@ jabae
 ```js
 function solution(number, k) {
     let answer = "";
-    let s = 0;
+    let s = -1;
     const numArr = number.split('').map((el) => Number(el));
     for (let e = k + 1; e <= number.length; e++) {
         let max = 0;
-        for (let i = s; i < e; i++) {
+        for (let i = s + 1; i < e; i++) {
             if (max >= numArr[i]) continue ;
             if (max === 9) break ;
             max = numArr[i];
             s = i;
         }
-        s += 1;
         answer += max;
     }
     return answer;
