--- a/Level 2/27. 124 나라의 숫자.md
+++ b/Level 2/27. 124 나라의 숫자.md
@@ -17,28 +17,16 @@ jabae
 ```js
 function solution(n) {
     let answer = "";
+    let mark = [4, 2, 1];
     let len = 0;
-    let s = 0;
-    for (let i = 1; ; i++) {
-        if (n >= (Math.pow(3, i) - 1) / 2  && n < (Math.pow(3, i+1) - 1) / 2) {
-            s = (Math.pow(3, i) - 1) / 2;
-            len = i;
-            break;
-        }
-    }
-    for (let i = len; i > 0; --i) {
-        let r = Math.pow(3, i - 1);
-        if (n < s + r) {
-            answer += "1";
-        }
-        else if (n < s + r * 2) {
-            answer += "2";
-            s += r;
-        }
-        else {
-            answer += "4";
-            s += r * 2;
-        }
+    let e = 0;
+    while (e < n) e += Math.pow(3, ++len);
+
+    while (len > 0) {
+        let tri = Math.pow(3, --len);
+        let idx = (n > e - tri) ? 0 : (n > e - tri * 2) ? 1 : 2;
+        answer += mark[idx];
+        e -= tri * idx;
     }
     return answer;
 }
