--- a/Level 1/25. K번째수.md
+++ b/Level 1/25. K번째수.md
@@ -4,3 +4,13 @@ function solution(array, commands) {
     return commands.map(([i, j, k]) => array.slice(i - 1, j).sort((a, b) => a - b)[k - 1]);
 }
 ```
+
+jabae
+```js
+
+```
+
+daekim
+```js
+    return commands.map(el => array.slice(el[0] - 1, el[1]).sort((a, b) => a - b)[el[2] - 1])
+```
