[Feat] daekim 코드 추가

--- a/Level 1/26. 숫자 문자열과 영단어.md
+++ b/Level 1/26. 숫자 문자열과 영단어.md
@@ -5,3 +5,22 @@ function solution(s) {
     return parseInt(card.reduce((acc, cur, i) => acc.split(cur).join(i), s))
 }
 ```
+
+jabae
+```js
+
+```
+
+daekim
+```js
+function solution(s) {
+    let num = {"zero": 0, "one": 1, "two": 2, "three": 3, "four": 4, "five": 5,
+               "six": 6, "seven": 7, "eight": 8, "nine": 9}
+    let tmp = '';
+    return Number(s.split('').reduce((acc, cur) => {
+        !isNaN(cur) ? acc += cur : tmp += cur
+        if (!isNaN(num[tmp])) {acc += (num[tmp]); tmp = ''}
+        return acc;
+    }, ''))
+}
+```
