[Feat] daekim function 추가

--- a/Level 1/25. K번째수.md
+++ b/Level 1/25. K번째수.md
@@ -12,5 +12,7 @@ jabae
 
 daekim
 ```js
+function solution(array, commands) {
     return commands.map(el => array.slice(el[0] - 1, el[1]).sort((a, b) => a - b)[el[2] - 1])
+}
 ```
