[Fix] jihyukim 코드 업데이트

--- a/Level 2/23. 다리를 지나는 트럭.md
+++ b/Level 2/23. 다리를 지나는 트럭.md
@@ -1,7 +1,7 @@
 jihyukim
 ```js
 function solution(len, wei, trucks) {
-    const bridge = Array.from({length: len}, () => 0);
+    const bridge = Array(len).fill(0);
     let time = 0;
     for (let on = 0; trucks.length; time++) {
         on -= bridge.shift();
