[Feat] 자배 코드 추가

--- a/Level 1/25. K번째수.md
+++ b/Level 1/25. K번째수.md
@@ -7,7 +7,9 @@ function solution(array, commands) {
 
 jabae
 ```js
-
+function solution(array, commands) {
+    return commands.map(([i, j, k]) => array.slice(--i, j).sort((a, b) => a - b)[--k])
+}
 ```
 
 daekim
