[Feat] 자배 코드 추가

--- a/Level 1/26. 숫자 문자열과 영단어.md
+++ b/Level 1/26. 숫자 문자열과 영단어.md
@@ -8,7 +8,10 @@ function solution(s) {
 
 jabae
 ```js
-
+function solution(s) {
+    const num = ['zero', 'one', 'two', 'three', 'four', 'five', 'six', 'seven', 'eight', 'nine'];
+    return Number(num.reduce((acc, cur, i) => acc = acc.replaceAll(cur, i), s));
+}
 ```
 
 daekim
