--- a/Level 2/29. 삼각 달팽이.md
+++ b/Level 2/29. 삼각 달팽이.md
@@ -26,4 +26,21 @@ jabae
 
 daekim
 ```js
+function solution(n) {
+    let ret = Array.from({length: n}, (v, idx) => {
+        let arr = [];
+        for (let i = 0; i <= idx; i++) arr.push(0);
+        return arr;
+    })
+    let x = -1;
+    let y = 0;
+    let cnt = 1;
+    let line = -1;
+    while (n-- && ++line >= 0)
+        for (let j = 0; j <= n; j++) {
+            line % 3 === 0 ? ++x : line % 3 === 1 ? ++y : (--x, --y)
+            ret[x][y] = cnt++;
+        }
+    return ret.flat();
+}
 ```
