[Feat] daekim 코드 추가

--- a/Level 2/31. 괄호 변환.md
+++ b/Level 2/31. 괄호 변환.md
@@ -25,4 +25,26 @@ jabae
 ```
 daekim
 ```js
+function solution(p) {
+    if (!p.length) return '';
+    let idx, open, check;
+    function rec(arr) {
+        if (!arr.length) return '';
+        let str = '';
+        open = 0;
+        check = arr[0] === '(' ? true : false;
+        for (idx = 0; idx < arr.length; idx++) {
+            arr[idx] === '(' ? open++ : open--
+            if (idx && !open) break;
+        }
+        let u = idx === arr.length ? arr : arr.splice(0, idx + 1);
+        let v = idx === arr.length ? [] : arr;
+        str += check ? u.join('') + rec(v) : '(' + rec(v) + ')' + u.reduce((acc, cur, i) => {
+            if (i > 0 && i < u.length - 1) acc.push(cur === '(' ? ')' : '(');
+            return acc;
+        }, []).join('');
+        return str;
+    }
+    return rec(p.split(''));
+}
 ```
