[Feat] jiihyukim 코드 추가

--- a/Level 2/30. 메뉴 리뉴얼.md
+++ b/Level 2/30. 메뉴 리뉴얼.md
@@ -1,6 +1,23 @@
 jihyukim
 ```js
-
+function solution(orders, course) {
+    const res = [];
+    const order = orders.map((el) => el.split('').sort());
+    const getList = (arr, idx, com, len, list) => {
+        if (com.length === len) list[com] = list[com] ? list[com] + 1 : 1;
+        else for (let i = idx; i < arr.length; i++) getList(arr, i + 1, com + arr[i], len, list);
+    }
+    course.forEach((n) => {
+        const list = {};
+        order.forEach((el) => getList(el, 0, '', n, list));
+        
+        const keys = Object.keys(list);
+        const max = Math.max(...Object.values(list));
+        if (keys.length && max !== 1)
+            keys.forEach((el) => list[el] === max && res.push(el));
+    });
+    return res.sort();
+}
 ```
 
 jabae
