[Feat] 자배 코드 추가

--- a/Level 2/29. 삼각 달팽이.md
+++ b/Level 2/29. 삼각 달팽이.md
@@ -22,6 +22,18 @@ function solution(n) {
 
 jabae
 ```js
+function solution(n) {
+    const answer = Array.from({length: n}, (_, i) => Array.from({length: i + 1}));
+    let num = 0;
+    for (let i = 0; i < Math.ceil(n/3); i++) {
+        let [y, x] = [2 * i - 1, i];
+        let l = n - (3 * i);
+        for (let j = 0; j < l; j++) answer[++y][x] = ++num;
+        for (let j = 0; j < l - 1; j++) answer[y][++x] = ++num;
+        for (let j = 0; j < l - 2; j++) answer[--y][--x] = ++num;
+    }
+    return answer.flat();
+}
 ```
 
 daekim
