[Feat] 자배 코드 추가

--- a/Level 2/30. 메뉴 리뉴얼.md
+++ b/Level 2/30. 메뉴 리뉴얼.md
@@ -22,7 +22,32 @@ function solution(orders, course) {
 
 jabae
 ```js
+function solution(orders, course) {
+    const answer = [];
+    const newOrders = orders.map((el) => el.split('').sort().join(''));
+    for (let i = 0; i < course.length; i++) {
+        const cmbs = makeCmbs(newOrders, course[i]);
+        const max = Math.max(...Object.values(cmbs));
+        if (max > 1) answer.push(...Object.keys(cmbs).filter(key => cmbs[key] === max));
+    }
+    return answer.sort();
+}
 
+function makeCmbs (orders, num) {
+    const cmb = {}
+    const rec = (ret, n, s) => {
+        if (!n) {
+            ret in cmb? cmb[ret]++ : cmb[ret] = 1;
+            return ;
+        }
+        for (let i = 0; i <= s.length - n; i++) rec(ret + s[i], n - 1, s.substring(i + 1));
+    }
+    for (let el of orders) {
+        if (el.length < num) continue ;
+        rec("", num, el);
+    }
+    return cmb;
+}
 ```
 
 daekim
