[Feat] 자배 코드 추가

--- a/Level 2/31. 괄호 변환.md
+++ b/Level 2/31. 괄호 변환.md
@@ -22,6 +22,40 @@ function solution(p) {
 ```
 jabae
 ```js
+function solution(p) {
+    if (!p || checkRight(p)) return p;
+ 
+    let answer = '';
+    let f = 0;
+    let i = -1;
+    while (++i < p.length) {
+        f += (p[i] === '(') ? +1 : -1;
+        if (!f) break;
+    }
+    let u = p.substring(0, i + 1);
+    let v = p.substring(i + 1);
+    if (checkRight(u)) {
+        answer += u;
+        answer += solution(v);
+    }
+    else {
+        let ret = '(';
+        ret += solution(v);
+        ret += ')';
+        for (let i = 1; i < u.length - 1; i++) ret += (u[i] === '(') ? ')' : '(';
+        answer += ret;
+    }
+    return answer;
+}
+
+function checkRight (pi) {
+    let f = 0;
+    for (let i = 0; i < pi.length; i++) {
+        f += (pi[i] === '(') ? +1 : -1;
+        if (f < 0) return false;
+    }
+    return true;
+}
 ```
 daekim
 ```js
