[Feat] 자배 코드 추가

--- a/Level 1/27. 두 개 뽑아서 더하기.md
+++ b/Level 1/27. 두 개 뽑아서 더하기.md
@@ -9,3 +9,15 @@ function solution(numbers) {
     return [...res].sort((a, b) => a - b);
 }
 ```
+jabae
+```js
+function solution(numbers) {
+    const answer = new Set();
+    const makeSum = (count, sum, idx) => {
+        if (!count) return answer.add(sum);
+        for (let i = idx; i < numbers.length; i++) makeSum(count - 1, sum + numbers[i], i + 1);
+    }
+    makeSum(2, 0, 0);
+    return Array.from(answer).sort((a, b) => a - b);
+}
+```
