[Feat] 자배 코드 추가

--- a/Level 1/28. 2016년.md
+++ b/Level 1/28. 2016년.md
@@ -7,3 +7,10 @@ function solution(a, b) {
     return day[(b - 1) % 7];
 }
 ```
+jabae
+```js
+function solution(a, b) {
+    const week = ['THU','FRI','SAT','SUN','MON','TUE','WED'], date = [31,29,31,30,31,30,31,31,30,31,30];
+    return week[(date.reduce((acc, cur, i) => i < a - 1 ? acc + cur : acc, 0) + b) % 7]
+}
+```
