--- a/Level 1/29. 폰켓몬.md
+++ b/Level 1/29. 폰켓몬.md
@@ -4,3 +4,9 @@ function solution(nums) {
     return Math.min(nums.length / 2, new Set(nums).size);
 }
 ```
+jabae
+```js
+function solution(nums) {
+    return Math.min(nums.length / 2, new Set(nums).size);
+}
+```
