[Feat] daekim 코드 추가

--- a/Level 1/27. 두 개 뽑아서 더하기.md
+++ b/Level 1/27. 두 개 뽑아서 더하기.md
@@ -21,3 +21,21 @@ function solution(numbers) {
     return Array.from(answer).sort((a, b) => a - b);
 }
 ```
+
+daekim
+```js
+function solution(numbers) {
+    let set = new Set()
+    function rec(arr, len, sum) {
+        if (!len) {
+            set[sum] ? set : set.add(sum)
+            return;
+        }
+        arr.forEach((e, i) => {
+            rec(arr.slice(i + 1), len - 1, sum + e)
+        })
+    }
+    rec(numbers, 2, 0)
+    return [...set].sort((a, b) => a - b);
+}
+```
