[Feat] daekim 코드 추가

--- a/Level 1/28. 2016년.md
+++ b/Level 1/28. 2016년.md
@@ -14,3 +14,16 @@ function solution(a, b) {
     return week[(date.reduce((acc, cur, i) => i < a - 1 ? acc + cur : acc, 0) + b) % 7]
 }
 ```
+
+daekim
+```js
+function solution(a, b) {
+    let date = [31, 29, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31]
+    let day = ['FRI','SAT','SUN','MON','TUE','WED','THU'];
+    let sum = 0;
+    for (let i = 0; i < a - 1; i++)
+        sum += date[i];
+    sum += b;
+    return day[(sum - 1) % 7]
+}
+```
