--- a/Level 1/29. 폰켓몬.md
+++ b/Level 1/29. 폰켓몬.md
@@ -10,3 +10,10 @@ function solution(nums) {
     return Math.min(nums.length / 2, new Set(nums).size);
 }
 ```
+
+daekim
+```js
+function solution(nums) {
+    return Math.min(nums.sort().filter((el, idx) => el != nums[idx + 1]).length, nums.length / 2);
+}
+```
