[Feat] 자배 코드 추가

--- a/Level 2/32. 수식 최대화.md
+++ b/Level 2/32. 수식 최대화.md
@@ -5,7 +5,58 @@ jihyukim
 
 jabae
 ```js
+function solution(expression) {
+    const [exp, op] = extractOp(expression);
+    let opComb = [];
+    const recOp = (ret, count, arr) => {
+        if (!count) {
+            opComb.push(ret);
+            return ;
+        }
+        for (let i = 0; i < arr.length; i++) recOp(ret.concat(arr[i]), count - 1, arr.filter((_, j) => i !== j));
+    }
+    recOp([], op.length, op);
+    
+    let max = 0;
+    opComb.forEach((opArr) => {
+        let result = exp.slice();       
+        opArr.forEach((opS) => {
+            let idx = 0;
+            while (result.indexOf(opS) > 0) {
+                idx = result.indexOf(opS);
+                result.splice(idx - 1, 3, calc(result.slice(idx - 1, idx + 2)));
+            }
+        })
+        result = Math.abs(result[0]);
+        max = max < result ? result : max;
+    })
+    return max;
+}
 
+function calc ([n1, op, n2]) {
+    switch (op) {
+        case '*': return n1 * n2;
+        case '+': return n1 + n2;
+        case '-': return n1 - n2;
+    }
+}
+
+function extractOp (expr) {
+    const exArr = [];
+    const op = new Set();
+    
+    let tmp = 0;
+    for (let i = 0; i <= expr.length; i++) {
+        let num = Number(expr[i]);
+        if (!isNaN(num)) tmp = tmp * 10 + Number(expr[i]);
+        else {
+            exArr.push(tmp, expr[i]);
+            op.add(expr[i]);
+            tmp = 0;
+        }
+    }
+    return [exArr.slice(0, -1), [...op].slice(0, -1)];
+}
 ```
 
 daekim
