[Feat] 자배 코드 추가

--- a/Level 2/33. [3차] 방금그곡.md
+++ b/Level 2/33. [3차] 방금그곡.md
@@ -5,7 +5,44 @@ jihyukim
 
 jabae
 ```js
+function solution(m, musicinfos) {
+    let [time, title] = [0, ''];
+    const neo = getFullNote(m, m.length - (m.split('#').length - 1));
 
+    musicinfos.forEach((el) => {
+        let [s, e, tt, n] = el.split(',');
+        s = s.split(':'), e = e.split(':');
+        const t1 = new Date(2022,12,30,s[0],s[1]).getTime();
+        const t2 = new Date(2022,12,30,e[0],e[1]).getTime();
+        const t = (t2 - t1) / 1000 / 60;
+        const real_n = getFullNote(n, t);
+
+        if (!checkIncludes(real_n, neo)) return ;
+        if (time < t) time = t, title = tt;
+    })
+    return !time ? '(None)' : title;
+}
+
+function checkIncludes (full, find) {
+    for (let i = 0; i <= full.length - find.length; i++) {
+        if (full[i] === find[0]) {
+            for (let j = 0; j < find.length; j++) {
+                if (full[i + j] !== find[j]) break ;
+                else if (j === find.length - 1) return true;
+            }
+        }
+    }
+    return false;
+}
+
+function getFullNote (note, time) {
+    const original = note.split('').reduce((acc, cur) => {
+        cur === '#' ? acc[acc.length - 1] += '#' : acc.push(cur)
+        return acc;
+    }, []);
+    if (time > original.length) for (let i = 0; i <= time; i = original.length) original.push(...original);
+    return original.slice(0, time);
+}
 ```
 
 daekim
