[Feat] jihyukim 코드 추가

--- a/Level 2/32. 수식 최대화.md
+++ b/Level 2/32. 수식 최대화.md
@@ -1,6 +1,23 @@
 jihyukim
 ```js
-
+function solution(expression) {
+    const opt = [['*', '+', '-'], ['*', '-', '+'], ['+', '*', '-'],
+                 ['+', '-', '*'], ['-', '+', '*'], ['-', '*', '+']];
+    const cal = {
+        '+': (a, b) => a + b,
+        '*': (a, b) => a * b,
+        '-': (a, b) => a - b
+    }
+    const search = (arr, o) => {
+        for (let i = arr.indexOf(o); i !== -1; i = arr.indexOf(o)) {
+            arr[i - 1] = cal[o](arr[i - 1], arr[i + 1]);
+            arr.splice(i, 2);
+        }
+        return arr;
+    }
+    const exp = expression.split(/(\*|\+|\-)/).map((el) => el in cal ? el : parseInt(el));
+    return opt.reduce((acc, [a, b, c]) => Math.max(acc, Math.abs(search(search(search(exp.slice(), a), b), c))), 0);
+}
 ```
 
 jabae
