[Feat] jihyukim 코드 추가

--- a/Level 2/33. [3차] 방금그곡.md
+++ b/Level 2/33. [3차] 방금그곡.md
@@ -1,6 +1,34 @@
 jihyukim
 ```js
-
+function solution(m, musicinfos) {
+    const list = {};
+    const replace = (o) => {
+        const n = {'C#': 'H', 'D#': 'I', 'F#': 'J', 'G#': 'K', 'A#': 'L'};
+        Object.keys(n).forEach((el) => { 
+            if (o.includes(el)) o = o.split(el).join(n[el]);
+        });
+        return o;
+    }
+    
+    m = replace(m);
+    musicinfos.forEach((el) => {
+        let [start, end, title, melody] = el.split(',');
+        let [h1, m1] = start.split(':'), [h2, m2] = end.split(':');
+        if (h2 === '00' && h1 !== '00') h2 = '24';
+        const min = (h2 - h1) * 60 - (m1 - m2);
+        
+        melody = replace(melody);
+        list[title] = melody.repeat(Math.floor(min / melody.length))
+            + melody.substring(0, min % melody.length);
+    });
+    return Object.keys(list).reduce((acc, cur) => {
+        if (list[cur].includes(m)) {
+            if (acc === '(None)') return cur;
+            if (list[acc].length < list[cur].length) return cur;
+        }
+        return acc;
+    }, '(None)');
+}
 ```
 
 jabae
