[Feat] daekim 코드 수정

--- a/Level 1/32. 소수 만들기.md
+++ b/Level 1/32. 소수 만들기.md
@@ -10,6 +10,7 @@ daekim
 ```js
 function solution(nums) {
     let ret = 0;
+    let i, sqrt;
     
     function prime(num) {
         if (num === 7) {
@@ -17,8 +18,7 @@ function solution(nums) {
             return ;
         }
         else if (num < 11) return ;
-        let i;
-        let sqrt = Math.sqrt(num);
+        sqrt = Math.sqrt(num);
         for (i = 3; i <= sqrt; i += 2)
             if (!(num % i)) break;
         if (sqrt < i) ret++;
