[Feat] jihyukim 코드 추가

--- a/Level 1/30. 소수 찾기.md
+++ b/Level 1/30. 소수 찾기.md
@@ -1,5 +1,14 @@
 Jihykim
 ```js
+function solution(n) {
+    if (n === 2) return 1;
+    let res = 2;
+    for (let i = 3, j = 3; i <= n; i += 2) {
+        for (j = 3; j <= Math.sqrt(i); j += 2) if (i % j === 0) break;
+        if (i % j) res += 1;
+    }
+    return res;
+}
 ```
 
 jabae
