[Feat] jihyukim 코드 추가

--- a/Level 1/31. 모의고사.md
+++ b/Level 1/31. 모의고사.md
@@ -1,5 +1,14 @@
 jihyukim
 ```js
+function solution(answers) {
+    const rules = [[1, 2, 3, 4, 5], [2, 1, 2, 3, 2, 4, 2, 5], [3, 3, 1, 1, 2, 2, 4, 4, 5, 5]];
+    const marks = rules.map((el, i) => answers.filter((n, j) => el[j % el.length] === n).length);
+    const max = Math.max(...marks);
+    return marks.reduce((acc, cur, i) => {
+        if (cur === max) acc.push(i + 1);
+        return acc;
+    }, []);
+}
 ```
 
 jabae
