[Feat] jihyukim 코드 추가

--- a/Level 1/32. 소수 만들기.md
+++ b/Level 1/32. 소수 만들기.md
@@ -1,5 +1,24 @@
 jihyukim
 ```js
+function isPrime(n) {
+    if ((n > 2 && n % 2 === 0) || n <= 1) return 0;
+    for (let i = 3; i <= Math.sqrt(n); i += 2)
+        if (n % i === 0) return 0;
+    return 1;
+}
+
+function solution(nums) {
+    const getSum = (cnt, num, idx) => {
+        let prime = 0;
+        if (cnt === 3) return isPrime(num);
+        else {
+            for (let i = idx; i < nums.length; i++)
+                prime += getSum(cnt + 1, num + nums[i], i + 1);
+        }
+        return prime;
+    }
+    return getSum(0, 0, 0);
+}
 ```
 
 jabae
