--- a/Level 1/30. 소수 찾기.md
+++ b/Level 1/30. 소수 찾기.md
@@ -13,6 +13,17 @@ function solution(n) {
 
 jabae
 ```js
+function solution(n) {
+    let answer = 0;
+    const checkPrime = (num) => {
+        if (num <= 1) return false;
+        if (num !== 2 && num % 2 === 0) return false;
+        for (let i = 3; i <= Math.sqrt(num); i += 2) if (num % i === 0) return false;
+        return true
+    }
+    for (let i = 2; i <= n; i++) if (checkPrime(i)) answer++;
+    return answer;
+}
 ```
 
 daekim
