[Feat] 자배 코드 추가

--- a/Level 1/31. 모의고사.md
+++ b/Level 1/31. 모의고사.md
@@ -13,6 +13,12 @@ function solution(answers) {
 
 jabae
 ```js
+function solution(answers) {
+    const makeScore = (submit) => answers.reduce((acc, cur, i) => cur == submit[i % submit.length] ? acc + 1 : acc, 0);
+    const students = [makeScore("12345"), makeScore("21232425"), makeScore("3311224455")];
+    const max = Math.max(...students);
+    return students.reduce((acc, cur, i) => cur === max ? acc.concat(i + 1) : acc, [])
+}
 ```
 
 daekim
