[Feat] 자배 코드 추가

--- a/Level 1/32. 소수 만들기.md
+++ b/Level 1/32. 소수 만들기.md
@@ -23,6 +23,23 @@ function solution(nums) {
 
 jabae
 ```js
+function solution(nums) {
+    let answer = 0;
+    const checkPrime = (num) => {
+        if (num <= 1) return false;
+        if (num !== 2 && num % 2 === 0) return false;
+        for (let i = 3; i <= Math.sqrt(num); i += 2) if (num % i === 0) return false;
+        return true
+    }
+    for(let i = 0; i <= nums.length - 3; i++) {
+        for (let j = i + 1; j <= nums.length - 2; j++) {
+            for (let z = j + 1; z < nums.length; z++) {
+                if (checkPrime(nums[i] + nums[j] + nums[z])) answer++;
+            }
+        }
+    }
+    return answer;
+}
 ```
 
 daekim
