[Feat] jihyukim 코드 추가

--- a/Level 2/34. 행렬 테두리 회전하기.md
+++ b/Level 2/34. 행렬 테두리 회전하기.md
@@ -1,5 +1,32 @@
 jihyukim
 ```js
+function solution(rows, cols, queries) {
+    const matrix = Array.from({length: rows}, (_, i) => Array.from({length: cols}, (_, j) => cols * i + j + 1));
+    
+    return queries.map((el) => {
+        const [x1, y1, x2, y2] = el.map((e) => e - 1);
+        const border = [matrix[x1][y1]];
+        
+        for (let i = x1; i < x2; i++) {
+            matrix[i][y1] = matrix[i + 1][y1];
+            border.push(matrix[i][y1]);
+        }
+        for (let i = y1; i < y2; i++) {
+            matrix[x2][i] = matrix[x2][i + 1];
+            border.push(matrix[x2][i]);
+        }
+        for (let i = x2; i > x1; i--) {
+            matrix[i][y2] = matrix[i - 1][y2];
+            border.push(matrix[i][y2]);
+        }
+        for (let i = y2; i > y1 + 1; i--) {
+            matrix[x1][i] = matrix[x1][i - 1];
+            border.push(matrix[x1][i]);
+        }
+        matrix[x1][y1 + 1] = border[0];
+        return Math.min(...border);
+    })
+}
 ```
 
 jabae
