[Feat] jihyukim 코드 추가

--- a/Level 2/35. 두 큐 합 같게 만들기.md
+++ b/Level 2/35. 두 큐 합 같게 만들기.md
@@ -1,5 +1,25 @@
 jihyukim
 ```js
+function solution(queue1, queue2) {
+    const queue = queue1.concat(queue2);
+    const goal = queue.reduce((a, b) => a + b) / 2;
+    
+    let [start, end] = [0, queue1.length];
+    let sum = queue1.reduce((a, b) => a + b);
+    
+    for (let move = 0; move <= queue.length + 2; move++) {
+        if (sum === goal) return move;
+        if (sum > goal) {
+            sum -= queue[start];
+            start++;
+        }
+        else {
+            sum += queue[end];
+            end++;
+        }
+    }
+    return -1;
+}
 ```
 
 jabae
